--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,11 @@
 
     <input #newItem placeholder="add an item" (keyup.enter)="addItem(newItem.value); newItem.value=''" class="lg-text-input" id="addItemInput" />
 
-    <button class="btn-primary" (click)="addItem(newItem.value)">Add</button>
+    <div class="btn-wrapper">
+        <button class="btn btn-menu" [class.active]="filter == 'all'" (click)="filter = 'all'">All</button>
+        <button class="btn btn-menu" [class.active]="filter == 'active'" (click)="filter = 'active'">To Do</button>
+        <button class="btn btn-menu" [class.active]="filter == 'done'" (click)="filter = 'done'">Done</button>
+    </div>
 
     <h2>{{items.length}} <span *ngIf="items.length === 1; else elseBlock">item</span>
         <ng-template #elseBlock>items</ng-template>
